API docs completed
